feat: add prompt tags, factual dictionary asset, and lightweight routing
Co-authored-by: DanexCodr <216312766+DanexCodr@users.noreply.github.com>
Agent-Logs-Url: https://github.com/DanexCodr/DanexChat/sessions/d9387cb5-a76b-498f-9e11-4af69bae989b